--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,5 +1,5 @@
 .statistics {
-  font-family: 'Roboto', sans-serif;
+  width: 500px;
   text-align: center;
   font-size: 16px;
   background-color: rgb(233, 233, 233);
